--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+a {
+    text-decoration: none; /* 밑줄을 제거 */
+    color: black; /* 기본 색상 지정 */
+    padding: 0px 15px 0px 15px;
+    font-family:sans-serif;
 }
 
 .logo {
-    width: 100px;     /* 너비 조절 */
-    height: auto;     /* 높이 자동 비율 유지 */
-    display: block;   /* 가운데 정렬 시에 유용 */
-  }
+    display: flex;
+    align-items: center;
+    gap: 10px; /*최신 CSS에서 사용하는 방법*/
+    font-family:sans-serif;
+}
+
+.logo-img {
+    width: 50px;     
+    height: auto;   
+    display: block;   
+}
