--- a/style.css
+++ b/style.css
@@ -22,3 +22,45 @@ a {
     height: auto;   
     display: block;   
 }
+
+/* 드롭다운 스타일 */
+.dropdown {
+    position: relative; /* 드롭다운 메뉴의 기준점으로 설정 */
+    display: inline-block;
+}
+
+.dropdown-btn {
+    background: none; 
+    border: none;
+    font-size: 20px;
+    cursor: pointer; /* 배경이랑 테두리 없애니까 기본 적용이 안 됨. 이유가 뭘까? */
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.dropdown-menu {
+    display: none; /* 마우스가 올라가기 전에는 안 보이도록 */
+    position: absolute; /* dropdown 기준으로 정렬 */
+    right: 0; /* 드롭다운 버튼 오른쪽 기준 정렬*/
+    background: whitesmoke;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 10px;
+    width: 120px;
+}
+
+.dropdown-item {
+    display: block;  /* 수직으로 한 줄씩 차지하도록 block으로 (세로로 하고 싶으면 flex) */
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+}
+
+.dropdown-item:hover {
+    background: gray;
+}
+
+/* hover 사용해서 마우스를 올리면 메뉴가 나타남 */
+.dropdown:hover .dropdown-menu {
+    display: block; /* 수직으로 한 줄씩 차지하도록 block으로 (세로로 하고 싶으면 flex) */
+}
