--- a/style.css
+++ b/style.css
@@ -4,6 +4,25 @@ header {
     align-items: center;
 }
 
+@media (max-width: 800px) { /* 반응형을 위한 부분*/
+    nav {
+        display: flex;
+        justify-content: center; /* 네비게이션을 중앙 정렬 */
+        align-items: center;
+        flex-grow: 1; /* 네비게이션이 남은 공간을 채우도록 설정 (컨테이너의 남은 공간을 균등하게 나눠서 차지하는 기능)*/
+    }
+    
+    .title-text {
+        display: none;
+    }
+
+    nav a {
+        font-size: 12px;
+        padding: 0.5vw 5vw; /* 간격이 비율에 맞게 줄어들도록 설정*/
+    }
+
+}
+
 a {
     text-decoration: none; /* 밑줄을 제거 */
     color: black; /* 기본 색상 지정 */
