--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /*화면의 세로 길이(높이)를 100% 사용하겠다*/
-    background-color: navy;
+    height: 100vh; 
+    background-color: lightgrey;
     flex-direction: column;
 }
 
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;
+    background-color: gray;
     flex-direction: column;
     padding: 20px;
     width: 400px;
@@ -23,6 +23,7 @@ body {
     font-size: xx-large;
 }
 
+
 #todo-input {
     flex: 1;
     padding: 10px;
@@ -31,7 +32,75 @@ body {
     height: 15px;
 }
 
-.add-btn {
+#add-btn {
+    background-color: darkslategray;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+#add-btn:hover {
+    background-color: black;
+}
+
+
+.list-container {
+    display: flex;
+    align-items: stretch;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 10px;
+}
+
+
+.list-container h3 {
+    text-align: center;
+    margin-bottom: 10px;
+    min-height: 30px; 
+
+}
+
+
+.todo-box,
+.done-box {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding: 10px;
+    height: 100%;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    background: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+
+
+
+
+
+.complete-btn {  /*여러 개 생기니까 class로*/
     background-color: green;
     color: white;
     border-radius: 5px;
@@ -40,27 +109,20 @@ body {
     cursor: pointer;
 }
 
-.add-btn:hover {
-    background-color: rgb(2, 98, 2);
+.complete-btn:hover {
+    background-color: darkgreen;
 }
 
-
-.list-container {
-    display: flex;
-    width: 40vh;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 10px;
+.delete-btn {  /*여러 개 생기니까 class로*/
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
 }
 
-.todo-box {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.delete-btn:hover {
+    background-color: darkred;
 }
 
-.done-box {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
